Footer mobile styling, making the columns stack on mobile screen views (should only happen on mobiles) and fixing the min-height for the new stacked columns. Also added two mobile only columns for the footer that are center aligned for the 'About us' and 'Links' sections as left aligned/right aligned didn't make sense when the columns stack. Added computer only tablet only definitions for the other left/right aligned columns so we continue to get the same layout on everything down to tablets (inclusive)

--- a/app/assets/stylesheets/partials/_footer_mobile.sass
+++ b/app/assets/stylesheets/partials/_footer_mobile.sass
@@ -3,13 +3,13 @@
 // 
 // The following styles are for the footer
 
-// Tablet and large phone view
+// Tablet and large, wide screen phone view
 @media only screen and (max-width: 991px) and (min-width: 432px)
 	footer
-		min-height: 15em
+		min-height: 15em // Fix the min-height so the colouring of the footer is there under the links
 
-// Small tiny iphone view
+// Small tiny iphone view and general mobile view
 @media only screen and (max-width: 431px)
 	footer
-		min-height: 20em
+		min-height: 24em // Fix the min-height so the colouring of the footer is there under the links
 		
